test/good/sets/set07.px

{Int}*{Float} x = {1}, {7}
print x
