test/bad/tuples/decl01.px

Float*Int t = 0.1, 0.2
